<resources>
    <string name="app_name">Ensiklopedia Singasari</string>
    <string name="main_menu">Main Menu</string>
    <string name="tokoh_title">Tokoh Singasari</string>
    <string name="tokoh1">Ken Arok</string>
    <string name="tokoh2">Ken Dedes</string>
    <string name="tokoh3">Tunggul Ametung</string>
    <string name="tokoh4">Empu Gandring</string>
    <string name="tokoh5">Parameswara</string>
    <string name="tokoh6">Kertanegara</string>
<<<<<<< HEAD
    <string name="background">background</string>
    <string name="sejarah_singosar">sejarah singosar</string>
    <string name="teks_utama">teks utama</string>
    <string name="gambar_arca_candi">gambar arca candi</string>
    <string name="timeline_text">timeline text</string>
    <string name="line">line</string>
    <string name="line_1">line 1</string>
    <string name="line_2">line 2</string>
    <string name="line_3">line 3</string>
    <string name="line_4">line 4</string>
    <string name="line_5">line 5</string>
    <string name="line_6">line 6</string>
    <string name="line_7">line 7</string>
    <string name="background_popup">background popup</string>
    <string name="teks_popup">teks popup</string>
    <string name="home_button">home button</string>
    <string name="teks_panjang_1">Kertayaja, Raja dari Kediri mengutus Tunggul Ametung untuk mengamankan kerusuhan yang ada di sekitar Tumapel. Keberhasilan Tunggu Ametung membuatnya diangkar menjad Akuwu di Tumapel. Teribisan Tunggu Ametung membuat Tumapel menjadi terkenal dan disegani oleh daerah-daerah taklukan Kediri yang lain.</string>
    <string name="teks_panjang_2">Ken Arok membunuh Empu Gandring untuk merebut keris sakti buatannya, kemudian membunuh majikannya Tunggul Ametung dan mengangkat dirinya sendiri sebagai akuwu baru di Tumapel serta menikahi Ken Dedes. Ken Dedes yang dipercaya akan melahirkan raja-raja Jawa menjadi alasan tindakan Ken Arok</string>
    <string name="teks_panjang_3">Perang Ganter tercetus pada tahun 1222 akibat perselisihan antara Kertajaya, raja Kediri dengan para Brahmana. Para Brahmana meminta perlindungan Ken Arok yang juga sedang mempersiapkan pemberontakan terhadap Kediri. Kemenangan Ken Arok menjadikan dirinya sebagai raja dan Tumapel sebagai kerajaan yang merdeka.</string>
    <string name="teks_panjang_4">Terjadinya tragedi berdarah yang didasari atas rasa balas dendam. Ken Arok tewas dibunuh Ki Pangalasan atas perintah Anusapati, Anusapati mati dibutunuh Tohjaya, dan Tohjaya tewas akibar pemberintakan ranggawuni. Rnaagawuni mengakhiri tragedi dengan mengikat tali persahabatan antara keturunan Ken Arok dengan Tunggu Ametung.</string>
    <string name="teks_panjang_5">Takhta Ranggawuni digantikan puteranya, Kertanegara dengan cara yang damai pada tahun 1268. Kertanegara berambisi menyatukan Nusantara dalam kekuasaan Singosari dengan melakukan ekspedisi Pamalayu menguasai daerah Sumatera dan ekspedisi Pabali yaitu menguasai Bali.</string>
    <string name="teks_panjang_6">Pada tahun 1292 Jayakatwang bupati Gelang-Gelang yang merupakan sepupu, sekaligus ipar, sekaligus besan Kertanegara melakukan pemberontakan yang menewaskan Kertanegara sekaligus mengakhiri riwayat Kerajaan Singosari. pemberontakan berehasil berjalan akibat kekosongan ibu kota dimana pasukan Singosari tersebar di Nusantara.</string>
    <string name="teks_panjang_7">Tahun 1293 Raden Wijaya memanfaatkan kedatangan pasukan Mongol untuk menghancurkan Jayakatwang. Gabungan pasukan Mongol Wijaya berhasil membuat Jayakatwang menyerah. Namun Wijaya menyerang balik pasukan Mongol untuk mengusir mereka dari Jawa. Wijaya kemudian menobatkan dirinya menjadi raja Majapahit sebagai penerus kerajaan Singosari.</string>
    <string name="teks_awal">Kerajaan Singosari adalah sebuah kerajaan di Jawa Timur yang didirikan oleh Ken Arok pada tahun 1222. Lokasi kerajaan ini berada di daerah Singosari, Malang. Kisah suksesi raja-raja Tumapel versi Pararaton diwarnai pertumpahan darah yang dilatari balas dendam.\nKerajaan Singosari berperan besar dalam sejarah Indonesia selain sebagai cikal bakal kerajaan Majapahit juga sebagai penanda peralihan zaman Klasik Tua menjadi klasik Muda.</string>
    <string name="artefak_menu">artefak menu</string>
    <string name="candi_button">candi button</string>
    <string name="prasasti_button">prasasti button</string>
    <string name="arca_button">arca button</string>
    <string name="senjata_button">senjata button</string>
    <string name="content_show_up">content-show-up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tokoh_menu">TokohMenuActivity</string>
=======
>>>>>>> 592d8563be8ed1c3f82a7c131f115b97bd313f79
</resources>
