<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lifeuniverse.storysingosari.MenuArtefak">

    <!-- Background utama -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/menu_artefak_background_dasar"
        android:contentDescription="@string/background" />

    <!--
        ARTEFAK MENU
     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Padding atas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <!-- Padding kiri -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5">

                <!-- ARTEFAK MENU -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".7"
                    android:scaleType="fitStart"
                    android:id="@+id/menu_artefak_judul"
                    android:contentDescription="@string/artefak_menu" />

                <!-- Spasi kanan -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="8.5" />

            </LinearLayout>

            <!-- Padding kanan -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3" />
        </LinearLayout>

        <!-- Padding bawah -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Padding Atas -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <!-- Padding Kiri -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25">

                <!-- CANDI -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:src="@drawable/candi_button"
                    android:id="@+id/candi_button"
                    android:contentDescription="@string/candi_button" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <!-- PRASASTI -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:src="@drawable/prasasti_button"
                    android:id="@+id/prasasti_button"
                    android:contentDescription="@string/prasasti_button" />
            </LinearLayout>

            <!-- Padding Kanan -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>


        <!-- Padding Tengah Orientasi Vertikal -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <!-- Padding Kiri -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25">

                <!-- ARCA -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:src="@drawable/arca_button"
                    android:id="@+id/arca_button"
                    android:contentDescription="@string/arca_button" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <!-- SENJATA -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:src="@drawable/senjata_button"
                    android:id="@+id/senjata_button"
                    android:contentDescription="@string/senjata_button" />
            </LinearLayout>

            <!-- Padding Kanan -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>


        <!-- Padding Bawah -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>

    <!-- Home button -->
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/home_button"
        android:scaleType="fitStart"
        android:id="@+id/home_artefak"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/home_button" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/progressBar1"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_loading"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:id="@+id/loading_gbr_menu_artefak"
                android:src="@drawable/loading_glow"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/loading_teks_menu_artefak"
                android:src="@drawable/loading_teks"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
